src/Components/Sidebar/sidebar.css
/* ... */
.notify-txt-btm {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding-top: 10px;
}
.hour-txt {
  /* font-family: Poppins; */
  font-size: 8px;
  font-weight: 400;
  line-height: 12px;
  text-align: left;
  color: #667085;
}

.read-txt {
  font-size: 8px;
  font-weight: 400;
  line-height: 12px;
  text-align: right;
  color: #0f68ff;
}
/* After build Styling*/

/* .Mui-selected {
  color: #0f68ff !important;
  background: red !important;
  display: flex;
  align-items: center;
  gap: 12px;
  font-size: 14px !important;
  font-style: normal !important;
  font-weight: 500 !important;
  line-height: 160% !important; 
  border-radius: 8px !important;
  transition: border-radius 0.15s cubic-bezier(0.4, 0, 0.2, 1) 0s !important;
} */
.menu-items {
  color: var(--Grey-500---Primary, #667085) !important;
  font-size: 14px !important;
  font-style: normal !important;
  font-weight: 500 !important;
  line-height: 160% !important; /* 22.4px */
}

.Avatar-div {
  /* margin-top: 30%; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.Avatar-div-mobile {
  margin-top: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/*dropdown avatar-top */

.css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root {
  gap: 10px;
}
.css-9mgopn-MuiDivider-root {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;

  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  border: none !important;
}
/* .css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
    top: 53px !important;
    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 5px -3px,
      rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px !important;
  } */

.List-div {
  /* margin-top: 20% !important; */

  padding-left: 30px !important;
  padding-right: 8px !important;
  /* color: var(--Grey-500---Primary, #667085) !important; */

  font-size: 14px !important;
  font-style: normal !important;
  font-weight: 500 !important;
  line-height: 160% !important; /* 22.4px */
}
.sidebar__logout {
  display: flex;
  gap: 18px;
  padding-left: 16px !important;
  margin-top: 45px !important;
}
.sidebar-log-mb {
  display: flex;
  gap: 18px;
  padding-left: 16px !important;
  margin-top: 30px !important;
}
.sidebar__logout img {
  cursor: pointer;
}
.sidebar__logout p {
  font-family: "ClashGrotesk";
  font-size: 14px;
  font-weight: 550;
  line-height: 17.22px;
  text-align: left;
  color: #0a1126;
  cursor: pointer;
  letter-spacing: 0.5px;
}

.sidebar__bottom {
  /* margin-top: 60px; */
  /* margin-left: 15px; */
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-bottom: 80px;
  align-items: center;
  /* height: 100%; */
}
.sidebar__bottom img {
  width: 150px;
  height: 130px;
  /* margin-left: 35px; */
}
/* .sidebar__bottom-mb {
  margin-top: 60px;
  margin-left: 15px;
} */
.sidebar__bottom-mb img {
  /* width: 150px;
  height: 130px; */
  margin-left: 35px;
}
.sidebar__bottom p,
.sidebar__bottom-mb p {
  /* padding-right: 40px !important; */
  text-align: center !important;
  font-family: Poppins;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  text-align: center;
  color: #0a1126;
  padding-bottom: 16px !important;
}
.sidebar__bottom button,
.sidebar__bottom-mb button {
  width: 200px;
  height: 53px;
  border-radius: 12px;
  background-color: #0a1126;
  font-family: "Poppins" !important ;
  font-size: 14px;
  font-weight: 500;
  line-height: 21px;
  text-align: center;
  color: #fff;
  /* margin-left: 10px; */
}
.sidebar__bottom button:hover,
.sidebar__bottom-mb button:hover {
  border: 1px solid #0a1126 !important;
  background-color: #ffffff !important;
  color: #0a1126 !important;
}

/* icons */
.css-cveggr-MuiListItemIcon-root {
  min-width: auto !important;
}
.css-h4y409-MuiList-root {
  padding-top: 35px !important;
  /* padding-left: 30px !important; */
}
/* icon-label */
.css-16ac5r2-MuiButtonBase-root-MuiListItemButton-root {
  /* padding-top: 12px !important;
    padding-bottom: 12px !important; */
  gap: 12px !important;
}

.list-icons {
  min-width: 24px !important;
  width: 24px !important;
  height: 20px !important;
  font-size: 24px !important;
  color: var(--Grey-500---Primary, #667085) !important;
}
.list-icons img {
  width: 16px;
  height: 16px;
}
.Logout-div {
  position: absolute;
  bottom: 0;
  display: flex;
  align-items: center;
  gap: 12px;
  padding: 12px 16px;
  padding-left: 27px;
}
.Logout-txt {
  color: var(--Secondary-Red-500, #f04a4a);
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 120%; /* 16.8px */
}
.items-main-heading {
  padding-left: 16px;
  color: var(--Grey-500---Primary, #667085);
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 160%; /* 19.2px */
  padding-bottom: 8px;
  text-transform: uppercase;
}
/* .muiltr-1jkhpm7.active {
    color: rgb(255, 255, 255);
    pointer-events: none;
    transition: border-radius 0.15s cubic-bezier(0.4, 0, 0.2, 1) 0s;
    background-color: rgba(255, 255, 255, 0.1) !important;
  } */

.list-item {
  color: #0a1126 !important;

  font-family: ClashGrotesk;
  font-size: 14px;
  font-weight: 500;
  line-height: 17.22px;
  text-align: left;

  gap: 18px;
}
.list-item-active {
  background: #166fbf0f !important;
  border-radius: 12px !important;
  display: flex;
  align-items: center;
  gap: 18px;
  font-size: 14px !important;
  font-style: normal !important;
  font-weight: 500 !important;
  line-height: 160% !important; /* 22.4px */
  border-radius: 8px;
  /* padding-top: 12px !important;
    padding-bottom: 12px !important; */
  /* background-color: var(--Blue-Text, #0F68FF) !important; */
  transition: border-radius 0.15s cubic-bezier(0.4, 0, 0.2, 1) 0s !important;
  color: #166FBF !important;

}
.list-item:hover {
  /* color: #0f68ff !important; */
  border-radius: 8px !important;

}
/* ... */

